@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/ecasound
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/ecasound/ChangeLog,v 1.54 2009/05/21 14:35:41 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/ecasound/ChangeLog,v 1.55 2009/05/31 12:13:23 maekke Exp $
+
+  31 May 2009; Markus Meier <maekke@gentoo.org> ecasound-2.6.0.ebuild:
+  amd64/x86 stable, bug #271779
 
   21 May 2009; Samuli Suominen <ssuominen@gentoo.org>
   -ecasound-2.5.2-r1.ebuild, ecasound-2.6.0.ebuild:
